# asset-error-demo

./: Cargo.toml  Forc.toml  README.md  fuel-toolchain.toml
src/: main.sw
tests/: harness.rs
